--- a/build.gradle
+++ b/build.gradle
@@ -7,11 +7,10 @@ version = project.mod_version
 group = project.maven_group
 
 repositories {
-    // Add repositories to retrieve artifacts from in here.
-    // You should only use this when depending on other mods because
-    // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
-    // See https://docs.gradle.org/current/userguide/declaring_repositories.html
-    // for more information about repositories.
+    maven {
+        name = "Modrinth"
+        url = "https://api.modrinth.com/maven"
+    }
 }
 
 dependencies {
@@ -22,6 +21,12 @@ dependencies {
 
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+
+    // Mods for better boot
+    modImplementation "maven.modrinth:lazydfu:0.1.3"
+    modImplementation "maven.modrinth:smoothboot-fabric:1.19-1.7.1"
+    modImplementation "maven.modrinth:modmenu:4.1.2"
+
 }
 
 processResources {
